# docs/swagger.json
@@ -221,10 +221,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/model.TokenSample"
                         }
                     }
                 ],
@@ -555,13 +552,15 @@
                     "items": {
                         "$ref": "#/definitions/model.UnitClue"
                     }
-                },
-                "id": {
-                    "type": "integer",
-                    "example": 1
-                },
-                "user_id": {
-                    "type": "integer"
+                }
+            }
+        },
+        "model.TokenSample": {
+            "type": "object",
+            "properties": {
+                "token": {
+                    "type": "string",
+                    "example": "your_token"
                 }
             }
         },
